--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,6 +12,11 @@ jobs:
   syntax-check:
     name: CWTools Syntax Check
     runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      contents: read
+      statuses: write
+      pull-requests: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -21,6 +26,11 @@ jobs:
         with:
           game: stellaris
           locLanguages: "english german"
+          vanillaMode: 0
+          rulesRef: master
+          changedFilesOnly: 1
+          suppressedOffenceCategories: '{"failure":[], "warning":[], "notice":[]}'
+          suppressedFiles: '[]'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -36,6 +46,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: syntax-check
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
     outputs:
       new-release-published: ${{ steps.semantic.outputs.new-release-published }}
       new-release-version: ${{ steps.semantic.outputs.new-release-version }}
