fix(ci): add missing conventional-changelog-conventionalcommits dependency
The @semantic-release/commit-analyzer with conventionalcommits preset
requires the conventional-changelog-conventionalcommits package to be
installed, even when not using changelog generation.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -70,6 +70,7 @@ jobs:
           npm install -g semantic-release
           npm install -g @semantic-release/git
           npm install -g @semantic-release/exec
+          npm install -g conventional-changelog-conventionalcommits
 
       - name: Create semantic-release config
         run: |
