fix(ci): only update mod version, not supported_version in descriptor.mod
- Change sed command to only update the first line version (mod version)
- Prevent accidentally updating supported_version (game compatibility version)
- Use '1s' instead of 's' to target only the first occurrence

The supported_version field indicates which Stellaris game version
the mod supports and should not be changed by semantic-release.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -101,7 +101,7 @@ jobs:
               [
                 "@semantic-release/exec",
                 {
-                  "prepareCmd": "sed -i 's/version=\"[^\"]*\"/version=\"${nextRelease.version}\"/' descriptor.mod"
+                  "prepareCmd": "sed -i '1s/version=\"[^\"]*\"/version=\"${nextRelease.version}\"/' descriptor.mod"
                 }
               ],
               [
