fix(ci): capture semantic-release outputs for Steam Workshop publishing
- Add output capture to semantic-release step to detect new releases
- Parse semantic-release output to set new-release-published and new-release-version
- Enable Steam Workshop publish step to run when new releases are created
- Use GITHUB_OUTPUT instead of deprecated set-output syntax

The Steam Workshop step was being skipped because semantic-release
wasn't properly outputting the release status for downstream jobs.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -121,7 +121,19 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          npx semantic-release
+          npx semantic-release > semantic-release-output.txt 2>&1 || true
+          cat semantic-release-output.txt
+          
+          # Check if a new release was published
+          if grep -q "Published release" semantic-release-output.txt; then
+            echo "new-release-published=true" >> $GITHUB_OUTPUT
+            # Extract version from the semantic-release output
+            VERSION=$(grep -o "Published release [0-9]\+\.[0-9]\+\.[0-9]\+" semantic-release-output.txt | sed 's/Published release //')
+            echo "new-release-version=$VERSION" >> $GITHUB_OUTPUT
+          else
+            echo "new-release-published=false" >> $GITHUB_OUTPUT
+            echo "new-release-version=" >> $GITHUB_OUTPUT
+          fi
   publish-to-steam:
     name: Publish to Steam Workshop
     runs-on: ubuntu-latest
