--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -139,6 +139,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [syntax-check, semantic-release]
     if: needs.semantic-release.outputs.new-release-published == 'true'
+    environment: 
+      name: steam-workshop
+      url: https://steamcommunity.com/sharedfiles/filedetails/?id=${{ secrets.STEAM_WORKSHOP_ID }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -249,6 +252,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: syntax-check
     if: github.event_name == 'release' && github.event.action == 'published'
+    environment:
+      name: steam-workshop
+      url: https://steamcommunity.com/sharedfiles/filedetails/?id=${{ secrets.STEAM_WORKSHOP_ID }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
